package protobee;


message Connections {
    repeated Connection connection = 1;
}

message Connection {
    required string	transport 		= 1;
	required string local_address  	= 2;
	required uint32 local_port     	= 3;
	required string remote_address 	= 4;
	required uint32 remote_port 	= 5;   
	required uint32 pid         	= 6;
	required string name 			= 7;
}

